[gd_scene load_steps=20 format=2]

[ext_resource path="res://entities/monster.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/monsters/orc_warrior_run_anim_f0.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/monsters/orc_warrior_run_anim_f1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/monsters/orc_warrior_run_anim_f2.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/monsters/orc_warrior_run_anim_f3.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/monsters/swampy_run_anim_f1.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/monsters/swampy_run_anim_f2.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/monsters/swampy_run_anim_f3.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/monsters/skelet_run_anim_f0.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/monsters/skelet_run_anim_f1.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/monsters/skelet_run_anim_f2.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/monsters/skelet_run_anim_f3.png" type="Texture" id=12]
[ext_resource path="res://assets/efx/4x4.png" type="Texture" id=13]
[ext_resource path="res://assets/sfx/smack.wav" type="AudioStream" id=14]

[sub_resource type="CapsuleShape2D" id=6]
radius = 5.0
height = 4.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "goblin",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "slime",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "skel",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
length = 0.35
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 0.297302, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.33 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="ParticlesMaterial" id=4]
resource_local_to_scene = true
emission_shape = 2
emission_box_extents = Vector3( 8, 8, 8 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 135.6
initial_velocity_random = 0.71
angular_velocity = 1.08628e-038
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 25.99
tangential_accel_random = 0.35
scale = 0.2
scale_random = 0.72
color = Color( 0.6, 0.576471, 0.635294, 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6, 7 )

[node name="Monster" type="KinematicBody2D" groups=[
"monsters",
]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = 0
position = Vector2( 8, 8 )
z_index = 3
frames = SubResource( 2 )
animation = "goblin"
frame = 2
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/death = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
light_mask = 0
position = Vector2( 8, 8 )
z_index = 12
emitting = false
amount = 24
lifetime = 0.3
explosiveness = 1.0
randomness = 0.4
visibility_rect = Rect2( -8, -8, 16, 16 )
process_material = SubResource( 4 )
texture = ExtResource( 13 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -46, -47 )
rect = Rect2( -10, -10, 128, 128 )
pause_particles = false
process_parent = true
physics_process_parent = true

[node name="SfxHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
volume_db = -3.0
bus = "Reverb"

[node name="SfxDeath" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 951.513, 520.097 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 8, 8 )
enabled = true
cast_to = Vector2( 16, 16 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( -25, 2 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
modulate = Color( 0.388235, 0.905882, 0, 1 )
position = Vector2( 33, 6 )
shape = SubResource( 5 )
[connection signal="finished" from="SfxDeath" to="." method="_on_SfxDeath_finished"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
